0.8.0
-----

0.7.0
-----

- Added 'sentry:test' to Artisan. (#65)
- Added 'user_context' configuration to disable automatic collection. (#55)

0.6.1
-----

- Various fixes for query event breadcrumbs. (#54)

0.6.0
-----

- Support for Laravel 5.4.

0.5.0
-----

- Require sentry/sentry >= 1.6.0.
- Allow overriding abstract type Sentry is bound to in service container.

0.4.0
-----

- Require sentry/sentry >= 1.5.0.
- Added support for Illuminate SQL queries in breadcrumbs.
- Replaced Monolog breadcrumb handler with Illuminate log handler.
- Added route transaction names.